<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.hotswapagent</groupId>
        <artifactId>hotswap-agent-parent</artifactId>
        <version>1.4.2-SNAPSHOT</version>
        <relativePath>../hotswap-agent-parent/pom.xml</relativePath>
    </parent>

    <artifactId>hotswap-agent-core</artifactId>

    <properties>
        <commons-io.version>2.7</commons-io.version>
        <commons-lang3.version>3.3.1</commons-lang3.version>
    </properties>

    <profiles>
        <profile>
            <id>default-tools</id>
            <activation>
                <os>
                    <family>!mac</family>
                </os>
                <jdk>(,1.11)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>${java.version}</version>
                    <scope>system</scope>
                    <optional>true</optional>
                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>mac-tools</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
                <jdk>(,1.11)</jdk>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.sun</groupId>
                    <artifactId>tools</artifactId>
                    <version>${java.version}</version>
                    <scope>system</scope>
                    <optional>true</optional>
                    <systemPath>${java.home}/../lib/tools.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>surefire-java11</id>
            <activation>
                <jdk>(,21)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <!--This is to override argLine from surefire config in parent pom-->
                            <!-- HotswapAgent=external serves to open modules -->
                            <argLine>
                                -XX:+AllowEnhancedClassRedefinition
                                -XX:HotswapAgent=external
                                -Xlog:redefine+class*=info
                                -Dblank
                                --add-opens java.base/java.lang=ALL-UNNAMED
                                --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
                                --add-opens java.base/java.io=ALL-UNNAMED
                                --add-opens java.desktop/java.beans=ALL-UNNAMED
                                --add-opens java.desktop/com.sun.beans=ALL-UNNAMED
                                --add-opens java.desktop/com.sun.beans.introspect=ALL-UNNAMED
                                --add-opens java.desktop/com.sun.beans.util=ALL-UNNAMED
                                --add-opens java.base/sun.security.action=ALL-UNNAMED
                                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                            </argLine>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <activation>
                <jdk>21</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <!--This is to override argLine from surefire config in parent pom-->
                            <!-- HotswapAgent=external serves to open modules -->
                            <argLine>-XX:HotswapAgent=external -Dblank -Xlog:redefine+class*=info</argLine>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <!--README.md are processed by automatic plugin documentation generator-->
                    <include>**/*.md</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Agent-Class>org.hotswap.agent.HotswapAgent</Agent-Class>
                            <Premain-Class>org.hotswap.agent.HotswapAgent</Premain-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <id>shade-when-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>commons-io</pattern>
                                    <shadedPattern>org.hotswap.agent.commons.io</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>javaparser-core</pattern>
                                    <shadedPattern>org.hotswap.agent.javaparser</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>javaparser-symbol-solver-core</pattern>
                                    <shadedPattern>org.hotswap.agent.javaparser-symbol-solver-core</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jackson-databind</pattern>
                                    <shadedPattern>org.hotswap.agent.jackson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jackson-core</pattern>
                                    <shadedPattern>org.hotswap.agent.jackson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jackson-annotations</pattern>
                                    <shadedPattern>org.hotswap.agent.jackson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>okhttp</pattern>
                                    <shadedPattern>org.hotswap.agent.okhttp</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-server</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-server</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-servlet</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-servlet</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-util</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-util</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-http</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-http</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-io</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-io</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>jetty-security</pattern>
                                    <shadedPattern>org.hotswap.agent.jetty-security</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>javax.servlet-api</pattern>
                                    <shadedPattern>org.hotswap.agent.servlet-api</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <include>commons-io:commons-io</include>
                                    <include>com.github.javaparser:javaparser-core</include>
                                    <include>com.github.javaparser:javaparser-symbol-solver-core</include>
                                    <include>com.fasterxml.jackson.core:jackson-databind</include>
                                    <include>com.fasterxml.jackson.core:jackson-core</include>
                                    <include>com.fasterxml.jackson.core:jackson-annotations</include>
                                    <include>com.squareup.okhttp3:okhttp</include>
                                    <!-- jetty -->
                                    <include>org.eclipse.jetty:jetty-server</include>
                                    <include>org.eclipse.jetty:jetty-servlet</include>
                                    <include>org.eclipse.jetty:jetty-util</include>
                                    <include>org.eclipse.jetty:jetty-http</include>
                                    <include>org.eclipse.jetty:jetty-io</include>
                                    <include>org.eclipse.jetty:jetty-security</include>
                                    <include>javax.servlet:javax.servlet-api</include>
                                </includes>
                            </artifactSet>
                            <shadeSourcesContent>true</shadeSourcesContent>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>9.4.54.v20240208</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>9.4.54.v20240208</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.14.3</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.14.3</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-core</artifactId>
            <version>3.25.8</version>
        </dependency>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>3.25.8</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-legacy</artifactId>
        </dependency>
    </dependencies>

</project>
